// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`EthereumSig > should create cancelProposal envelope 1`] = `
{
  "data": {
    "proposal": "0x56b857b02d573b0ba747333b57cb3dd11df57cc0d1bcc41c3c990466b477c5e8",
    "space": "test.eth",
  },
  "signatureData": {
    "address": "0xf1f09AdC06aAB740AA16004D62Dbd89484d3Be90",
    "domain": {
      "name": "snapshot",
      "version": "0.1.4",
    },
    "message": {
      "from": "0xf1f09AdC06aAB740AA16004D62Dbd89484d3Be90",
      "proposal": "0x56b857b02d573b0ba747333b57cb3dd11df57cc0d1bcc41c3c990466b477c5e8",
      "space": "test.eth",
      "timestamp": 1705795200,
    },
    "signature": "0xe358de8e39c6c0cc9df929892e61806371e6539199a2b0781b9100700760067334024ca8cd5f86f1cb16fc93e76602989618eeacebf1fafbc1acad882d14b4d61c",
    "types": {
      "CancelProposal": [
        {
          "name": "from",
          "type": "address",
        },
        {
          "name": "space",
          "type": "string",
        },
        {
          "name": "timestamp",
          "type": "uint64",
        },
        {
          "name": "proposal",
          "type": "bytes32",
        },
      ],
    },
  },
}
`;

exports[`EthereumSig > should create propose envelope 1`] = `
{
  "data": {
    "app": "snapshot-v2",
    "body": "Dummy body",
    "choices": [
      "For",
      "Against",
      "Abstain",
    ],
    "discussion": "https://snapshot.org",
    "end": 1705798800,
    "labels": [
      "1234e",
    ],
    "plugins": "{}",
    "snapshot": 19283932,
    "space": "wan-test.eth",
    "start": 1705795200,
    "title": "Creation test",
    "type": "basic",
  },
  "signatureData": {
    "address": "0xf1f09AdC06aAB740AA16004D62Dbd89484d3Be90",
    "domain": {
      "name": "snapshot",
      "version": "0.1.4",
    },
    "message": {
      "app": "snapshot-v2",
      "body": "Dummy body",
      "choices": [
        "For",
        "Against",
        "Abstain",
      ],
      "discussion": "https://snapshot.org",
      "end": 1705798800,
      "from": "0xf1f09AdC06aAB740AA16004D62Dbd89484d3Be90",
      "labels": [
        "1234e",
      ],
      "plugins": "{}",
      "snapshot": 19283932,
      "space": "wan-test.eth",
      "start": 1705795200,
      "timestamp": 1705795200,
      "title": "Creation test",
      "type": "basic",
    },
    "signature": "0x33482a4ebefdcc7c5dc006a8766e1b0dc5c653360b894d49a0c7819d97f16b6b67f4b78a9c4cd46f551fef61e4de97be9140bb32d5a43f7b0e52b4936a08c5f41c",
    "types": {
      "Proposal": [
        {
          "name": "from",
          "type": "address",
        },
        {
          "name": "space",
          "type": "string",
        },
        {
          "name": "timestamp",
          "type": "uint64",
        },
        {
          "name": "type",
          "type": "string",
        },
        {
          "name": "title",
          "type": "string",
        },
        {
          "name": "body",
          "type": "string",
        },
        {
          "name": "discussion",
          "type": "string",
        },
        {
          "name": "choices",
          "type": "string[]",
        },
        {
          "name": "labels",
          "type": "string[]",
        },
        {
          "name": "start",
          "type": "uint64",
        },
        {
          "name": "end",
          "type": "uint64",
        },
        {
          "name": "snapshot",
          "type": "uint64",
        },
        {
          "name": "plugins",
          "type": "string",
        },
        {
          "name": "app",
          "type": "string",
        },
      ],
    },
  },
}
`;

exports[`EthereumSig > should create vote envelope 1`] = `
{
  "data": {
    "authenticator": "",
    "choice": 1,
    "metadataUri": "",
    "proposal": "0xcc47146e5e0ac781e8976405a8da4468f2a0c4cdf0c7659353d728fafe46f801",
    "space": "wan-test.eth",
    "strategies": [],
    "type": "basic",
  },
  "signatureData": {
    "address": "0xf1f09AdC06aAB740AA16004D62Dbd89484d3Be90",
    "domain": {
      "name": "snapshot",
      "version": "0.1.4",
    },
    "message": {
      "app": "",
      "choice": 1,
      "from": "0xf1f09AdC06aAB740AA16004D62Dbd89484d3Be90",
      "metadata": "",
      "proposal": "0xcc47146e5e0ac781e8976405a8da4468f2a0c4cdf0c7659353d728fafe46f801",
      "reason": "",
      "space": "wan-test.eth",
      "timestamp": 1705795200,
    },
    "signature": "0x08dc521d9d8334fecb2f35f56db4536420865e35749425c2ed88219bdb230cd96e6302baf1881eb00e66631cbed3ed53bd237598a88b51980067ef7a090db35b1c",
    "types": {
      "Vote": [
        {
          "name": "from",
          "type": "address",
        },
        {
          "name": "space",
          "type": "string",
        },
        {
          "name": "timestamp",
          "type": "uint64",
        },
        {
          "name": "proposal",
          "type": "string",
        },
        {
          "name": "choice",
          "type": "uint32",
        },
        {
          "name": "reason",
          "type": "string",
        },
        {
          "name": "app",
          "type": "string",
        },
        {
          "name": "metadata",
          "type": "string",
        },
      ],
    },
  },
}
`;
